src/objects/User.object
<CustomObject>
    <fields>
        <fullName>OrderApi__Shopping_Cart_ID__c</fullName>
        <label>FONTEVA SYSTEM FIELD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Federated_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Federated User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Profile_Cover_Image__c</fullName>
        <description>The secure (&quot;https://&quot;) url where the profile cover image file is located. We recommend uploaded a logo that has a width of 1100px and height of 300px.</description>
        <inlineHelpText>The secure (&quot;https://&quot;) url where the profile cover image file is located. We recommend uploaded a logo that has a width of 1100px and height of 300px.</inlineHelpText>
        <label>Profile Cover Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>